--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.Company"
         tools:targetApi="31">
         <activity
+            android:name=".PostActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TasteActivity"
+            android:exported="false" />
+        <activity
             android:name=".talkActivity"
             android:exported="true" />
         <activity
