--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
             android:exported="true" />
         <activity android:name=".CarDetailActivity">
         </activity>
+        <activity android:name=".PostDetailActivity" />
 
     </application>
 
