신청 버튼 및 신청인원 확인 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
         </activity>
         <activity android:name=".PostDetailActivity" />
 
+        <activity android:name=".ApplicationListActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
